--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native": "^0.55.2",
     "react-native-elements": "^0.19.1",
     "react-native-extended-stylesheet": "^0.8.1",
+    "react-native-popup-dialog": "^0.15.0",
+    "react-native-slider": "^0.11.0",
     "react-navigation": "^2.11.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
