--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
+    "apollo-boost": "^0.1.15",
     "expo": "^27.0.1",
+    "graphql": "^14.0.0",
     "native-base": "^2.7.2",
     "react": "^16.4.2",
-    "react-native": "^0.55.2",
+    "react-apollo": "^2.1.11",
+    "react-native": "^0.55.4",
     "react-native-elements": "^0.19.1",
     "react-native-extended-stylesheet": "^0.8.1",
     "react-native-popup-dialog": "^0.15.0",
