--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint-plugin-graphql": "^2.1.1",
+    "eslint-plugin-prettier": "^2.6.2",
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
     "react-test-renderer": "16.3.1"
@@ -21,6 +23,7 @@
   "dependencies": {
     "@expo/vector-icons": "^6.3.1",
     "apollo-boost": "^0.1.15",
+    "apollo-link-context": "^1.0.8",
     "expo": "^27.0.1",
     "graphql": "^14.0.0",
     "native-base": "^2.7.2",
@@ -34,6 +37,7 @@
     "react-navigation": "^2.11.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "uuid": "^3.3.2"
   }
 }
