--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "react-native": "^0.55.4",
     "react-native-elements": "^0.19.1",
     "react-native-extended-stylesheet": "^0.8.1",
+    "react-native-multiple-select": "^0.4.4",
     "react-native-popup-dialog": "^0.15.0",
+    "react-native-simple-radio-button": "^2.7.2",
     "react-native-slider": "^0.11.0",
+    "react-native-status-bar-height": "^2.0.0",
     "react-navigation": "^2.11.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
