--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
     "react-native-simple-radio-button": "^2.7.2",
     "react-native-slider": "^0.11.0",
     "react-native-status-bar-height": "^2.0.0",
+    "react-native-tab-view": "^1.2.0",
+    "react-native-vector-icons": "^6.0.2",
     "react-navigation": "^2.11.2",
+    "react-navigation-header-buttons": "^2.1.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
