--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-elements": "^0.19.1",
     "react-native-extended-stylesheet": "^0.8.1",
     "react-native-multiple-select": "^0.4.4",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-popup-dialog": "^0.15.0",
     "react-native-simple-radio-button": "^2.7.2",
     "react-native-slider": "^0.11.0",
