--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,6 @@
 {
-    "editor.tabSize": 2,
-    "editor.formatOnSave": true,
-    "[javascript]": {
-      "editor.formatOnSave": false
-    },
-    "eslint.autoFixOnSave": true,
-    "eslint.alwaysShowStatus": false,
-    "prettier.disableLanguages": ["js"],
-    "python.pythonPath": "/usr/bin/python3"
-  }
-  
+  "editor.tabSize": 2,
+  "editor.formatOnSave": true,
+  "eslint.autoFixOnSave": false,
+  "prettier.eslintIntegration": true
+}
