--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
   "editor.tabSize": 2,
   "editor.formatOnSave": true,
-  "eslint.autoFixOnSave": false,
+  "eslint.autoFixOnSave": true,
   "prettier.eslintIntegration": true
 }
