--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native": "^0.55.4",
     "react-native-action-button": "^2.8.5",
     "react-native-collapsible": "^1.3.0",
+    "react-native-dropdownalert": "^3.9.0",
     "react-native-elements": "^0.19.1",
     "react-native-extended-stylesheet": "^0.8.1",
     "react-native-multiple-select": "^0.4.4",
