sagaryal part finished ... if any left push me to redmine ... now samip subedi resumes

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "apollo-link-context": "^1.0.8",
     "expo": "^27.0.1",
     "graphql": "^14.0.0",
+    "lodash": "^4.17.11",
     "native-base": "^2.7.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
@@ -36,9 +37,11 @@
     "react-native-dropdownalert": "^3.9.0",
     "react-native-elements": "^0.19.1",
     "react-native-extended-stylesheet": "^0.8.1",
+    "react-native-modal": "^7.0.2",
     "react-native-multiple-select": "^0.4.4",
     "react-native-parallax-scroll-view": "^0.21.3",
-    "react-native-popup-dialog": "^0.15.0",
+    "react-native-popup-dialog": "^0.15.1",
+    "react-native-ratings": "^6.2.0",
     "react-native-simple-radio-button": "^2.7.2",
     "react-native-slider": "^0.11.0",
     "react-native-status-bar-height": "^2.0.0",
