--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "eslint": "^5.13.0",
+    "eslint-config-prettier": "^4.0.0",
     "eslint-plugin-graphql": "^2.1.1",
     "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "jest-expo": "~27.0.0",
     "react-native-scripts": "1.14.0",
@@ -29,6 +32,7 @@
     "graphql": "^14.0.0",
     "lodash": "^4.17.11",
     "native-base": "^2.7.2",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-apollo": "^2.1.11",
     "react-native": "^0.55.4",
@@ -47,11 +51,13 @@
     "react-native-status-bar-height": "^2.0.0",
     "react-native-tab-view": "^1.2.0",
     "react-native-vector-icons": "^6.0.2",
+    "react-native-webview-messaging": "^1.2.3",
     "react-navigation": "^2.11.2",
     "react-navigation-header-buttons": "^2.1.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
+    "render-if": "^0.1.1",
     "uuid": "^3.3.2"
   }
 }
