--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "expo": {
     "sdkVersion": "27.0.0",
+    "version": "1.0.1",
     "splash": {
       "image": "./assets/logoFull.png",
       "backgroundColor": "#000"
@@ -11,7 +12,8 @@
         "googleMaps": {
           "apiKey": "AIzaSyDhf_MVoLfC8nEoxgSRsDLr3DxcbTO9aqA"
         }
-      }
+      },
+      "versionCode": 4
     },
     "ios": {
       "bundleIdentifier": "np.com.techkunja.qjobs"
